add styling update

--- a/views/add.handlebars
+++ b/views/add.handlebars
@@ -83,23 +83,27 @@
 
     </div> <!-- instDiv -->
 
-  <div id="recipeCard" class="hide"> <!--recipe-card-->
-    <div class="row ">
+  <div id="recipeCard" class="hide new-recipe s12"> <!--recipe-card-->
+
+    <div class="row "> <!-- recipe-card-row-->
       <h3 id="recipeName"></h3>
-      <div class="col s6 center-align">
-        <ul id="listIng">
-          <h4 class="card-content center-align">Ingredients</h4>
-        </ul>
-      </div>
-      <div class="col s6 center-align">
-        <ul id="listInst">
-          <h4 class="card-content center-align">Instructions</h4>
-        </ul>
-      </div>
-    </div>
+      <div class="recipe-details">
+
+        <div class="col s6 center-align add-ing"> <!-- ingredients -->
+          <ul id="listIng">
+            <h4 class="card-content center-align">Ingredients</h4>
+          </ul>
+        </div> <!-- ingredients -->
+
+        <div class="col s6 center-align add-inst">
+          <ul id="listInst">
+            <h4 class="card-content center-align">Instructions</h4>
+          </ul>
+        </div>
+
+      </div> <!-- recipe-details -->
+    </div> <!--row-->
   </div> <!--recipe-card-->
-
-
 
     <div class="row">
       <p>
