--- a/public/css/add.css
+++ b/public/css/add.css
@@ -14,10 +14,27 @@
     display: block; 
 }
 
+.new-recipe {
+    border: 4px solid red;
+}
+
 #recipeCard{
     border: 1px solid black;
     box-shadow: 5px 5px 5px #888888;
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     margin-bottom: 4rem;
     padding: 4rem;
+    padding-bottom: 5rem;
+}
+
+.recipe-details {
+    margin-top: 10px;
+}
+
+.add-ing {
+    font-size: 1.7rem;
+}
+
+.add-inst {
+    font-size: 1.2rem;
 }
