--- a/public/css/recipes.css
+++ b/public/css/recipes.css
@@ -1,13 +1,36 @@
-/* .container {
-    margin-top: 1rem;
-}; */
-
+#print-screen {
+    padding: 1rem;
+    padding-top: 0;
+    margin-left:10px;
+}
 .recipe-card {
     border: 1px solid black;
     box-shadow: 5px 5px 5px #888888;
     margin-top: 10px;
+    
 }
 
 .search-bar {
     margin: 25px;
+}
+
+.recipe-title {
+    margin-top: 3.5rem;
+    margin-bottom: 1rem;
+    padding-left:1.5rem;
+}
+
+.recipe-details {
+    padding: 5rem;
+    padding-top: 0.1rem;
+    font-size: 1rem;
+}
+
+.ingredients {
+    font-size: 1.2rem;
+}
+
+.instructions {
+    margin-top: 50px;
+    font-size: 1.2rem;
 }
