--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -19,9 +19,9 @@
   <div class="col s2 side-nav">
     <form>
       <div class="input-field">
-        <i class="material-icons prefix">search</i>
+        <i class="material-icons prefix" id="searchBtn">search</i>
         <input id="search" type="search" required>
-        <label class="label-icon" for="search" id="searchBtn"></label>
+        <label class="label-icon" for="search"></label>
         <i class="material-icons">close</i>
       </div>
     </form>
